wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -67,6 +67,29 @@ In case you would like to learn more, feel free to check out the links to closed
 - [Revamped Package Build Processes (#1998)](https://github.com/webiny/webiny-js/pull/1998)
 - [Optimize Deployment of Admin Area Application (#1989)](https://github.com/webiny/webiny-js/pull/1989)
 
+### `webiny.config.ts` - `build` / `watch` Commands - The New `overrides` Property
+
+From this release, within `webiny.config.ts` files, all Webpack and Babel overrides for the `build` and `watch` commands need to be defined via the new `overrides` property, [for example](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/common/api/code/fileManager/transform/webiny.config.ts#L10-L11):
+
+```ts title="api/code/fileManager/transform/webiny.config.ts" {10-11}
+import { createBuildFunction, createWatchFunction } from "@webiny/project-utils";
+
+const webpack = config => {
+    (config.externals as any).push("sharp");
+    return config;
+};
+
+export default {
+    commands: {
+        build: createBuildFunction({ cwd: __dirname, overrides: { webpack } }),
+        watch: createWatchFunction({ cwd: __dirname, overrides: { webpack } })
+    }
+};
+```
+
+For more information on this change, make sure to check out the [Additional Information](/docs/release-notes/5.18.0/upgrade-guide#additional-information) section in the [Upgrade Guide](/docs/release-notes/5.18.0/upgrade-guide).
+
+
 ### Pulumi Command - Improved Handling of `--json` Flag
 
 Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](/docs/key-topics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
