wip: create changelog

--- a/docs/release-notes/5.18.0/changelog.mdx
+++ b/docs/release-notes/5.18.0/changelog.mdx
@@ -28,7 +28,7 @@ Please check the [Webiny 5.18.0 migration guide](/docs/release-notes/5.18.0/upgr
   title={"The highlight of this release - the new Amazon DynamoDB-only version of Webiny!"}
 />
 
-The highlight of this release - the new [Amazon DynamoDB]-only version of Webiny Serverless CMS!
+The highlight of this release - the new Amazon DynamoDB-only version of Webiny Serverless CMS!
 
 As the name itself suggests, this new setup completely relies on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data!
 
@@ -56,7 +56,7 @@ We really hope you'll give this new version of Webiny Serverless CMS a try and t
 
 ## Development
 
-### Overhaul of Existing Development Tools ([#1990](https://github.com/webiny/webiny-js/pull/1990), [#2028](https://github.com/webiny/webiny-js/pull/2028), [#1998](https://github.com/webiny/webiny-js/pull/1998), [#1989](https://github.com/webiny/webiny-js/pull/1989) )
+### Overhaul of Existing Development Tools ([#1990](https://github.com/webiny/webiny-js/pull/1990), [#2028](https://github.com/webiny/webiny-js/pull/2028), [#1998](https://github.com/webiny/webiny-js/pull/1998), [#1989](https://github.com/webiny/webiny-js/pull/1989))
 
 A complete overhaul was done on the most important development-related Webiny CLI commands - [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) and [`webiny watch`](/docs/how-to-guides/use-watch-command). In short, you can expect both of these to be faster and also consume significantly less system resources.
 
@@ -89,7 +89,6 @@ export default {
 
 For more information on this change, make sure to check out the [Additional Information](/docs/release-notes/5.18.0/upgrade-guide#additional-information) section in the [Upgrade Guide](/docs/release-notes/5.18.0/upgrade-guide).
 
-
 ### Pulumi Command - Improved Handling of `--json` Flag
 
 Previously, when invoking the Pulumi CLI via the [`webiny pulumi`](/docs/key-topics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command) command and passing the `--json` flag to it, the final output would still include informative messages:
@@ -119,32 +118,36 @@ Learn more about remote runtime logs (logs forwarding) in the [Use the Watch Com
 
 ## Headless CMS
 
-### A New Way To Hook Into Install, Group, Model or Entry Lifecycle
+### Improved Lifecycle Events Using the "Pub/Sub" Approach
 
-We removed existing `InstallationPlugin`, `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` support in favor of publish/subscribe pattern. Groups did not have lifecycle support, so we added those.
+The existing `InstallationPlugin`, `CmsContentModelHookPlugin` and `CmsContentEntryHookPlugin` plugins, used to hook into the lifecycle of the Headless CMS installation process, content models and content entries, were removed and replaced with a simpler publish/subscribe (pub/sub) approach.
 
-To find out more about lifecycle events please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) article.
+To learn more more about it, please read our [Lifecycle Events](/docs/key-topics/headless-cms/lifecycle-events) key topic.
 
-### We Renamed a Lot of Plugins, Types and Interfaces
+### Renamed Plugins, Types and Interfaces
 
-The team agreed on some new namings and, to accommodate that, we removed the `Content` word from all types, interfaces and classes.
+The team agreed on some new namings and, to accommodate that, we've removed the `Content` word from all types, interfaces and classes.
 Names for some interfaces were changed a bit as well, for example, `ContentModelGroup` is now `CmsGroup`.
 
-There are probably a hundred or so types, interfaces and classes changed so listing them all would produce an unreadable piece of text, but here are the most important ones:
+If you're interested in all changes we made, please consult the linked pull request. The most important changes would be the following:
 
-- ContentModelPlugin -> CmsModelPlugin
-- ContentModelGroupPlugin -> CmsGroupPlugin
-- CmsModelFieldToStoragePlugin -> StorageTransformPlugin - and it is a class now
+- `ContentModelPlugin` → [`CmsModelPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/CmsModelPlugin.ts#L9)
+- `ContentModelGroupPlugin` → [`CmsGroupPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/CmsGroupPlugin.ts#L8)
+- `CmsModelFieldToStoragePlugin` → [`StorageTransformPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-headless-cms/src/content/plugins/storage/StorageTransformPlugin.ts#L26)
 
 :::note
-If you used some of renamed types, interfaces and classes your build/deploy will break, so just change them.
+In case you used some of the types mentioned here, please update them in your application code. For additional questions, please don't hesitate to send as a message in our community [Slack](https://www.webiny.com/slack) channel.
 :::
 
 ## Page Builder
 
 ### Button Page Element - Ability to Register A Custom Callback Handler ([#2022](https://github.com/webiny/webiny-js/pull/2022))
 
-TODO
+Prior to this release, we could say the Button page element was a bit "basic", since it was only capable of representing a link and nothing else. But, not anymore.
+
+Thanks to [@econtentmaps](https://github.com/econtentmaps), the button can now also be configured to execute a piece of code, that you previously registered via the new [`PbButtonElementClickHandlerPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/app-page-builder/src/types.ts#L256) plugin.
+
+[IMAGE]
 
 ## Documentation
 
