fix: just show a link to the full example

--- a/docs/tutorials/create-custom-application/serverless-application-development.mdx
+++ b/docs/tutorials/create-custom-application/serverless-application-development.mdx
@@ -28,7 +28,7 @@ In order to follow this tutorial, you must use Webiny version **5.18.0** or grea
 :::
 
 :::info
-The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+The complete code for the application we'll be building in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example).
 :::
 
 ## Overview
