fix: link sections

--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -72,19 +72,19 @@ pinterest-clone/app
 
 This is where we'll build our application and we'll build it in the following order.
 
-### 1. Application Layout
+### [Application Layout](/docs/tutorials/create-custom-application/react-application/layout)
 
 By default, the created React application contains its own layout, styles and some components. So, we'll want to make some adaptations here, remove some existing code, and add some new. For example, we'll need to change the global [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/components/Layout.tsx#L14) component and related CSS styles. We'll also need to set up the mentioned [Ant Design](https://ant.design/docs/react/introduce) React library.
 
-### 2. New Pin Modal Dialog
+### [New Pin Modal Dialog](/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog)
 
 Once we have the layout ready, we will continue by creating the **New Pin** modal dialog. This is what will enable users to create new pins, which we'll later display on the homepage. Additionally, we'll also get the chance to interact with the GraphQL API, by issuing our our first GraphQL mutation.
 
-### 3. Homepage - List of Pins
+### [Homepage - List of Pins](/docs/tutorials/create-custom-application/react-application/homepage)
 
 Once we're able to create new pins, we can proceed by building the homepage which will display pins created by different users. Apart from doing some minor styling, here we'll also have the chance to interact with the GraphQL API, where we will need to retrieve the list of all created pins, sorted from latest to oldest.
 
-### 4. Pin Details Page
+### [Pin Details Page](/docs/tutorials/create-custom-application/react-application/pin-details-page)
 
 Finally, on the homepage, once a user clicks on a pin, we need to redirect her/him to the **Pin Details** page. This is where we'll show pin's title, description, and the user that created the pin.
 
