--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -172,7 +172,7 @@ All of these files were created during the scaffolding process, and are basicall
 
 Once cleaned up, the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component might look something like the following:
 
-```tsx
+```tsx title="pinterest-clone/app/code/src/plugins/routes/home.tsx"
 import React from "react";
 import { RoutePlugin } from "@webiny/app/plugins/RoutePlugin";
 import { Route } from "@webiny/react-router";
