fix(upgrade-guide): info about gist on the CI

--- a/docs/release-notes/5.17.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.17.0/upgrade-guide.mdx
@@ -60,9 +60,9 @@ After testing the upgrade with several of our clients, we discovered various edg
 npx https://gist.github.com/Pavel910/fa8f1a4d0bd0296665251897f0f54506
 ```
 
-```info
+:::info
 If you’re deploying your project from a CI/CD pipeline, make sure you add this command before your deploy step.
-```
+:::
 
 ---
 
